# contur

./: .clang-format  .clang-tidy  .gitignore  README.md
.github/: IMPLEMENTATION_PLAN.md
.github/instructions/: contur2.instructions.md
.github/workflows/: ci.yml  docs.yml
misc/: format.ps1  format.sh
src/: .gitignore  CMakeLists.txt  CMakePresets.json  build.ps1  build.sh  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/contur/: architecture_cpu.cpp  cpu.cpp  device.cpp  dispatcher.cpp  handle.cpp  kernel.cpp  lan.cpp  memory.cpp  mmu.cpp  mp_dispatcher.cpp  process.cpp  scheduler.cpp  statistic.cpp  virtual_memory.cpp
src/contur/dispatch/: dispatcher.cpp  dispatcher_pool.cpp  mp_dispatcher.cpp
src/contur/fs/: block_allocator.cpp  file_descriptor.cpp  simple_fs.cpp
src/contur/io/: device_manager.cpp
src/contur/ipc/: ipc_manager.cpp  message_queue.cpp  pipe.cpp  shared_memory.cpp
src/contur/kernel/: kernel.cpp  kernel_builder.cpp
src/contur/memory/: mmu.cpp  page_table.cpp
src/contur/scheduling/: fcfs_policy.cpp  hrrn_policy.cpp  mlfq_policy.cpp  priority_policy.cpp  round_robin_policy.cpp  scheduler.cpp  spn_policy.cpp  srt_policy.cpp  statistics.cpp
src/contur/sync/: critical_section.cpp  deadlock_detector.cpp  mutex.cpp  semaphore.cpp
src/contur/syscall/: syscall_table.cpp
src/contur/tracing/: buffer_sink.cpp  console_sink.cpp  file_sink.cpp  tracer.cpp
src/contur/tui/: ftxui_app.cpp  ftxui_renderer.cpp  history_buffer.cpp  kernel_read_model.cpp  tui_controller.cpp
src/demos/: CMakeLists.txt  demo_architecture.cpp  demo_context.cpp  demo_mmu.cpp  demo_multiprocessor.cpp  demo_multitasking.cpp  demo_process.cpp  demo_scheduling.cpp  demo_synchronization.cpp  demo_virtual_memory.cpp
src/docs/doxygen/: getting_started.md  mainpage.md
src/include/contur/: architecture_cpu.h  cpu.h  device.h  dispatcher.h  handle.h  kernel.h  lan.h  memory.h  mmu.h  mp_dispatcher.h  process.h  scheduler.h  statistic.h  virtual_memory.h
src/include/contur/arch/: register_file.h
src/include/contur/core/: event.h  types.h
src/include/contur/cpu/: cpu.h
src/include/contur/dispatch/: dispatcher.h  dispatcher_pool.h  i_dispatch_runtime.h  i_dispatcher.h  mp_dispatcher.h
src/include/contur/execution/: interpreter_engine.h
src/include/contur/fs/: block_allocator.h  directory_entry.h  file_descriptor.h  i_filesystem.h  inode.h  simple_fs.h
src/include/contur/io/: console_device.h  device_manager.h  network_device.h
src/include/contur/ipc/: i_ipc_channel.h  ipc_manager.h  message_queue.h  pipe.h  shared_memory.h
src/include/contur/kernel/: i_kernel.h  kernel.h  kernel_builder.h
src/include/contur/memory/: clock_replacement.h  fifo_replacement.h  lru_replacement.h  mmu.h  optimal_replacement.h  page_table.h  physical_memory.h  virtual_memory.h
src/include/contur/process/: pcb.h  process_image.h
src/include/contur/scheduling/: fcfs_policy.h  hrrn_policy.h  i_scheduler.h  i_scheduling_policy.h  mlfq_policy.h  priority_policy.h  round_robin_policy.h  scheduler.h  spn_policy.h  srt_policy.h  statistics.h
src/include/contur/sync/: critical_section.h  deadlock_detector.h  i_sync_primitive.h  mutex.h  semaphore.h
src/include/contur/syscall/: syscall_handler.h  syscall_ids.h  syscall_table.h
src/include/contur/tracing/: buffer_sink.h  console_sink.h  file_sink.h  i_tracer.h  null_tracer.h  trace_event.h  trace_scope.h  trace_sink.h  tracer.h
src/include/contur/tui/: dashboard.h  ftxui_app.h  ftxui_renderer.h  history_buffer.h  i_renderer.h  memory_map_view.h  process_view.h  scheduler_view.h
src/include/demos/: demos.h
src/tests/: CMakeLists.txt  conanfile.txt  test_main.cpp
src/tests/integration/: test_kernel_api.cpp  test_kernel_end_to_end.cpp  test_process_scheduling_integration.cpp  test_tui_ftxui_integration.cpp  test_tui_tick_navigation.cpp
src/tests/unit/: test_alu.cpp  test_block_allocator.cpp  test_buffer_sink.cpp  test_buffer_sink_extended.cpp  test_clock.cpp  test_deadlock_detector.cpp  test_deadlock_detector_concurrent.cpp  test_device_manager.cpp  test_dispatcher.cpp  test_fcfs.cpp  test_hrrn.cpp  test_ipc_manager.cpp  test_kernel_builder.cpp  test_kernel_diagnostics.cpp  test_kernel_diagnostics_extended.cpp  test_message_queue.cpp  test_mlfq.cpp  test_mmu.cpp  test_mp_dispatcher.cpp  test_mutex.cpp  test_pipe.cpp  test_policy_contracts.cpp  test_priority_inversion.cpp  test_priority_policy.cpp  test_resource_contention.cpp  test_round_robin.cpp  test_scheduler.cpp  test_scheduler_concurrent.cpp  test_scheduler_extended.cpp  test_scheduling_policies_extended.cpp  test_semaphore.cpp  test_shared_memory.cpp  test_simple_fs.cpp  test_simple_fs_extended.cpp  test_spn.cpp  test_srt.cpp  test_statistics.cpp  test_sync_layers.cpp  test_syscall_extended.cpp  test_syscall_table.cpp  (+7 more)
